# portfolio_data_analyst-main

./: .gitignore  README.md  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
dags/: README.md  superstore_etl.py
dashboard/: README.md  app.py
docs/: README.md  airflow.md  bi.md  demo.md  model.md  otchet.md
docs/images/: README.md
notebooks/: 01_eda_overview.ipynb  README.md
r/: README.md  analysis.R
scripts/: README.md  run_airflow_docker.ps1  run_airflow_test.ps1  run_pipeline.ps1  run_postgres.ps1  run_streamlit.ps1  setup.ps1  setup.sh  sql_duckdb_demo.ps1
spark/: README.md  aggregations.sql  run_pyspark.py
sql/: README.md
sql/clickhouse/: init.sql
sql/duckdb/: analytics.sql
sql/greenplum/: distributed_mart.sql
sql/postgres/: init.sql
superstore/: README.md  labels.py
superstore/analysis/: eda.py  stats_models.py
superstore/embeddings/: chroma_products.py
superstore/etl/: data_quality.py  data_quality_runner.py  load_and_clean.py
superstore/loaders/: load_postgres.py
tests/: README.md  test_etl.py
