[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superstore-analytics"
version = "1.0.0"
description = "Аналитика продаж Global Superstore"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["superstore*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
